Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127763

Selecting a point from another series leaves selected point in previous series hidden

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8.0 Beta3
    • Graphs: 3D
    • None
    • 3e335fff6 (dev), b02a551d1 (6.8)

      Reproducible with the code snippet from QTBUG-127743

      Happens only with Default optimization.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes