Unhide previously selected point from another series

Fixes: QTBUG-127763
Change-Id: Ib994f19fd0206b2559fec496aa7421a2d525c51a
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 3e335fff694fea0597ea27cd876a80dd45b1c164)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>