src/graphs3d/engine/scatterinstancing.cpp
@@ -95,8 +95,10 @@ void ScatterInstancing::hideDataItem(qsizetype index)
 
 void ScatterInstancing::unhidePreviousDataItem()
 {
-    if (m_previousHideIndex >= 0)
+    if (m_previousHideIndex >= 0) {
         m_dataArray[m_previousHideIndex].hide = false;
+        markDataDirty();
+    }
 }
 
 void ScatterInstancing::resetVisibilty()
